--- a/.config/polybar/bar.ini
+++ b/.config/polybar/bar.ini
@@ -24,7 +24,7 @@ font-4 = Font Awesome 5 Brands,Font Awesome 5 Brands Regular:size=11:style=Regul
 
 [bar/left]
 inherit = bar/common
-monitor = ${env:MONITOR:VGA-1}
+monitor = ${env:MONITOR:DP-2}
 tray-position = right
 tray-padding = 12
 ;tray-scale = 0.9
@@ -35,6 +35,6 @@ modules-right = filesystem memory cpu wireless-network github date powermenu
 inherit = bar/common
 monitor = ${env:MONITOR:HDMI-1}
 tray-position = none
-modules-center = mpd
+modules-center = github
 modules-right = pulseaudio date
 
