--- a/.config/i3/config
+++ b/.config/i3/config
@@ -107,11 +107,11 @@ bindsym $mod+0 workspace number $ws10
 ########################################
 #          workspace outputs           #
 ########################################
-workspace $ws1 output VGA-1
-workspace $ws2 output VGA-1
-workspace $ws3 output VGA-1
-workspace $ws4 output VGA-1
-workspace $ws5 output VGA-1
+workspace $ws1 output DP-2
+workspace $ws2 output DP-2
+workspace $ws3 output DP-2
+workspace $ws4 output DP-2
+workspace $ws5 output DP-2
 workspace $ws6 output HDMI-1 
 workspace $ws7 output HDMI-1
 workspace $ws8 output HDMI-1
@@ -160,14 +160,16 @@ for_window [class="Spotify"] move container to workspace number $ws10
 for_window [class="I3-exit"] floating enable
 for_window [class="Google-chrome"] border 1pixel
 for_window [window_type=dialog] focus
-for_window [class="jetbrains-rubymine"] $ws2
+
+assign [class="^jetbrains-rubymine$"] $ws2
+
 
 ########################################
 #          application startup         #
 ########################################
 #exec --no-startup-id /usr/local/bin/hipchat4
 #exec --no-startup-id /usr/bin/spotify
-exec --no-startup-id /usr/bin/xautolock -time 10 -locker "i3lock --color=002b36 -i /home/scottp/Pictures/wallpaper/star_wars_empire_flag.png"
+exec --no-startup-id /usr/bin/xautolock -time 10 -locker "i3lock --color=002b36 -i /home/scottp/Media/Pictures/wallpaper/star_wars_empire_flag.png"
 #exec --no-startup-id /usr/bin/redshift
 #exec --no-startup-id /usr/bin/unity-settings-daemon
 #exec --no-startup-id /usr/lib/gnome-settings-daemon/gnome-settings-daemon
@@ -210,8 +212,6 @@ mode "launch" {
 }
 
 bindsym $mod+s mode "launch"
-
-
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
