replace hard coded token with ENV

--- a/.config/polybar/display.ini
+++ b/.config/polybar/display.ini
@@ -20,7 +20,7 @@ label = %date% %time%
 
 [module/github]
 type = internal/github
-token = c30747d5bacc56ed195bbffeb6d6f75b54b15c67
+token = ${env:GITHUB_ACCESS_TOKEN}
 empty-notifications = true
 label = %{T5}%{T-}:%notifications%
 interval = 300
