--- a/.yarnrc
+++ b/.yarnrc
@@ -2,6 +2,8 @@
 # yarn lockfile v1
 
 
+email sparrish@cppwind.com
 emoji true
 help true
-lastUpdateCheck 1551901405858
+lastUpdateCheck 1555950982759
+username sparrish
