--- a/.config/i3/config
+++ b/.config/i3/config
@@ -107,16 +107,16 @@ bindsym $mod+0 workspace number $ws10
 ########################################
 #          workspace outputs           #
 ########################################
-workspace $ws1 output DP-2
-workspace $ws2 output DP-2
-workspace $ws3 output DP-2
-workspace $ws4 output DP-2
-workspace $ws5 output DP-2
-workspace $ws6 output HDMI-1 
-workspace $ws7 output HDMI-1
-workspace $ws8 output HDMI-1
-workspace $ws9 output HDMI-1
-workspace $ws10 output HDMI-1 
+workspace $ws1 output DP-0
+workspace $ws2 output DP-0
+workspace $ws3 output DP-0
+workspace $ws4 output DP-0
+workspace $ws5 output DP-0
+workspace $ws6 output DP-2 
+workspace $ws7 output DP-2
+workspace $ws8 output DP-2
+workspace $ws9 output DP-2
+workspace $ws10 output DP-2 
 
 ########################################
 #             Launch Keys              #
@@ -185,7 +185,7 @@ exec_always --no-startup-id ~/bin/polybar.sh --log=trace &
 #   also see launch mode further down  #
 ########################################
 # start a terminal
-bindsym $mod+Return exec /usr/bin/terminator
+bindsym $mod+Return exec /usr/bin/gnome-terminal
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
