--- a/.yarnrc
+++ b/.yarnrc
@@ -2,8 +2,9 @@
 # yarn lockfile v1
 
 
+child-concurrency "6"
 email sparrish@cppwind.com
 emoji true
 help true
-lastUpdateCheck 1555950982759
+lastUpdateCheck 1557188915301
 username sparrish
