--- a/.config/polybar/audio.ini
+++ b/.config/polybar/audio.ini
@@ -1,7 +1,7 @@
 [module/mpd]
 type = internal/mpd
 
-format-online = <label-song>  <icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next>  <icon-repeat> <icon-random>
+format-online = <label-song> <icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next>  <icon-repeat> <icon-random>
 
 label-song-maxlen = 25
 label-song-ellipsis = true
@@ -23,10 +23,12 @@ toggle-off-foreground = #66
 [module/pulseaudio]
 type = internal/pulseaudio
 sink = alsa_output.pci-0000_00_1b.0.analog-stereo
+label-volume = %percentage%%
 label-muted = 
 label-muted-foreground = #fff
-format-volume = <ramp-volume>
+format-volume = <ramp-volume> <label-volume> 
 format-muted = <label-muted>
+
 
 ; Only applies if <ramp-volume> is used
 ; volume-off from font-awesome
