--- a/.gitconfig
+++ b/.gitconfig
@@ -51,6 +51,7 @@
     pager = less -FRSX
     whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
 	excudefiles = /home/scottp/.gitignore_global
+	autocrlf = input
 
 [diff]
     tool = meld
